--- a/LacunaExpress/app/src/main/res/layout/activity_add_account.xml
+++ b/LacunaExpress/app/src/main/res/layout/activity_add_account.xml
@@ -111,7 +111,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Add Account" />
+            android:text="Add Account"
+            android:onClick="OnLoginClick"/>
 
     </LinearLayout>
 
