Sending request update
The request is being sent but for some reason the event handler for the
server reply isn't functioning.

--- a/res/layout/activity_add_account.xml
+++ b/res/layout/activity_add_account.xml
@@ -105,7 +105,9 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
             android:layout_weight="1"
-            android:text="Login" />
+            android:text="Login" 
+            
+            />
 
         <Button
             android:id="@+id/add_account_add_account"
