Updated tons of stuff. Having an error though on line 91 of the ModifyActivity class. Not sure wha the problem is. Any ideas Jazz

--- a/res/layout/activity_modify_account.xml
+++ b/res/layout/activity_modify_account.xml
@@ -9,7 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="Add Account" />
+        android:text="Modify Account" />
 
     <TextView
         android:id="@+id/textView2"
@@ -26,7 +26,7 @@
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <EditText
-        android:id="@+id/add_account_username"
+        android:id="@+id/modify_account_username"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10" >
@@ -42,7 +42,7 @@
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <EditText
-        android:id="@+id/add_account_password"
+        android:id="@+id/modify_account_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -56,20 +56,20 @@
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <RadioGroup
-        android:id="@+id/add_account_server_choices"
+        android:id="@+id/modify_account_server_choices"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center" >
 
         <RadioButton
-            android:id="@+id/add_account_us1"
+            android:id="@+id/modify_account_us1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:checked="true"
             android:text="US1" />
 
         <RadioButton
-            android:id="@+id/add_account_pt"
+            android:id="@+id/modify_account_pt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:checked="false"
@@ -78,7 +78,7 @@
     </RadioGroup>
 
     <CheckBox
-        android:id="@+id/add_account_default"
+        android:id="@+id/modify_account_default"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -97,12 +97,12 @@
             android:text="--------------------------------------------------------" />
 
         <Button
-            android:id="@+id/add_account_add_account"
+            android:id="@+id/modify_account_modify_account"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_weight="1"
-            android:text="Add Account" />
+            android:text="Modify Account" />
 
     </LinearLayout>
 
