--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -53,6 +53,11 @@
         <item name="android:textStyle">bold</item>
         <item name="android:maxLines">2</item>
         <item name="android:ellipsize">end</item>
-    </style>    
+    </style>   
+
+
+    <style name="WithoutBackground" parent="AppTheme">
+        <item name="android:windowBackground">@null</item>
+    </style>	
 
 </resources>
