--- a/res/layout/opaque_text_view.xml
+++ b/res/layout/opaque_text_view.xml
@@ -12,6 +12,8 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
+
+<!-- The divider mentioned on line 20 is written in to replace the one in activity_list_view_deletion -->
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
