--- a/app/src/main/res/layout/widget_mail_config.xml
+++ b/app/src/main/res/layout/widget_mail_config.xml
@@ -3,11 +3,12 @@
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+    android:layout_height="fill_parent"
+    android:fillViewport="true">
 
     <LinearLayout
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
+              android:layout_width="fill_parent"
+              android:layout_height="fill_parent"
               android:orientation="vertical"
               android:id="@+id/widget_mail_config_layout"
         >
@@ -72,7 +73,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="Refresh Interval"
+            android:text="Refresh Interval:"
             android:id="@+id/textView9"/>
 
         <TextView
@@ -124,6 +125,20 @@
                 android:text="60 Minutes" />
 
         </RadioGroup>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Status Bar Notification When New Mail Arrives:"
+            android:id="@+id/textView13"/>
+
+        <Switch
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/widget_mail_config_notification_switch"
+            android:layout_gravity="center_horizontal"
+            android:checked="false"/>
 
         <Button
             android:id="@+id/widget_mail_config_create"
