Added button to select account to open Utilities
Added button to select account to open Utilities

--- a/app/src/main/res/layout/activity_select_account.xml
+++ b/app/src/main/res/layout/activity_select_account.xml
@@ -56,4 +56,12 @@
         android:layout_marginTop="52dp"
         android:text="Mail" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Utilities"
+        android:id="@+id/buttonSelectAccountUtilities"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
+
 </RelativeLayout>
