--- a/app/src/main/res/xml/widget_refresh.xml
+++ b/app/src/main/res/xml/widget_refresh.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <appwidget-provider
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:configure="com.JazzDevStudio.LacunaExpress.Widget.TempWidgetConfig"
+    android:configure="com.JazzDevStudio.LacunaExpress.Widget.WidgetConfig"
     android:minWidth="40dp"
     android:minResizeHeight="40dp"
     android:minHeight="40dp"
