--- a/app/src/main/res/layout/activity_mail_read.xml
+++ b/app/src/main/res/layout/activity_mail_read.xml
@@ -192,7 +192,15 @@
             android:text="Archive"
             android:id="@+id/account_mail_read_archive"
             android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"/>
+            android:layout_toEndOf="@+id/account_mail_read_reply"/>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Forward"
+            android:id="@+id/account_mail_read_forward"
+            android:layout_alignParentBottom="true"
+            android:layout_toStartOf="@+id/account_mail_read_delete"/>
 
     </RelativeLayout>
 </LinearLayout>
